# Continuum

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  DESIGN.md  README.md  SECURITY.md
.github/workflows/: ci.yml  release.yml
crates/continuum-adapter/: Cargo.toml
crates/continuum-adapter/src/: main.rs
crates/continuum-core/: Cargo.toml
crates/continuum-core/src/: dto.rs  error.rs  lib.rs  protocol.rs
crates/continuum-daemon/: Cargo.toml
crates/continuum-daemon/src/: lifecycle.rs  main.rs  mcp.rs  tools.rs
crates/continuum-daemon/tests/: e2e.rs
crates/continuum-graph/: Cargo.toml
crates/continuum-graph/src/: graph.rs  lib.rs  model.rs  resolver.rs
crates/continuum-indexer/: Cargo.toml
crates/continuum-indexer/src/: languages.rs  lib.rs  parser.rs  textsearch.rs  watcher.rs
crates/continuum-memory/: Cargo.toml
crates/continuum-memory/src/: lib.rs  schema.rs  store.rs
crates/continuum-search/: Cargo.toml
crates/continuum-search/src/: embedder.rs  fusion.rs  index.rs  lib.rs
crates/continuum-transport/: Cargo.toml
crates/continuum-transport/src/: framing.rs  jsonrpc.rs  lib.rs  mcp.rs  proxy.rs
docs/: agent-setup.md  releasing.md
npm/: README.md  package.json
npm/scripts/: install.js
scripts/: dogfood.ps1  install.ps1  install.sh  smoke-nav.ps1  smoke-test.ps1
