[package]
name = "continuum-adapter"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "continuum-adapter"
path = "src/main.rs"

[dependencies]
continuum-core.workspace = true
continuum-transport.workspace = true
serde_json.workspace = true
tokio.workspace = true
clap.workspace = true
