[package]
name = "continuum-indexer"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
continuum-core.workspace = true
continuum-graph.workspace = true
tokio.workspace = true
tracing.workspace = true
walkdir = "2"
notify = "6"
tree-sitter = "0.24"
tree-sitter-rust = "0.23"
tree-sitter-python = "0.23"
tree-sitter-javascript = "0.23"
tree-sitter-typescript = "0.23"
tree-sitter-go = "0.23"
